[tool.poetry]
name = "v2subs"
version = "0.1.0"
description = ""
authors = ["amir daaee <amir.daaee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yarl = "^1.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503', 'F403', 'F401']
max-line-length = 79
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
